Fixed misalignments of company challenge narrative from container padding

--- a/go/src/signin/static/stylesheets/carousel.css
+++ b/go/src/signin/static/stylesheets/carousel.css
@@ -47,14 +47,15 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 800px;
+  min-height: 500px;
   margin-bottom: 60px;
  /* margin-top:90px;*/
 }
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 800px;
+  min-height: 500px;
+  overflow: visible;
   background-color: #FFF;
 }
 .carousel-inner > .item > img {
@@ -277,12 +278,6 @@ h3 {
     }
     .col-md-4 {
       height: 120px;
-    }
-
-
-    .col-md-8 {
-      padding-left: 5%;
-      padding-right: 5%;
     }
 }
 
